# prefect-starter

./: LICENSE  README.md  makefile  prefect-starter.code-workspace  pyproject.toml
code/: main.py
code/flows/: hello.py
docker/: Dockerfile  docker-compose.yml
docker/deploy/: Dockerfile  docker-compose.yml
